Add credit and logo panel with logo image and company name

--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
     <body>
         <div class="main">
             <div class="side-panel">
-                <img src="img/hamdhulla-shakeeb-seaside-unsplash.jpg">
                 <div class="logo">
-                    
+                    <img src="img/odin-lined.png">
+                    <div class="company-name">ODIN</div>
+                </div>
+                <div class="credit">
+                    Photo by <a href="https://unsplash.com/@handhey?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">
+                    Hamdhulla Shakeeb</a> on <a href="https://unsplash.com/photos/S98UHzzXq_E?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">
+                    Unsplash</a>
                 </div>
             </div>
             <div class="content">
                 <div class="header-section">
-                    
+
                 </div>
                 <div class="form-section">
                     <form action="" method="post">
