Add basic header section with text and minimal styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     </head>
     <body>
         <div class="main">
+            <div class="content">
+                <div class="header-section">
+                    <p>This is not a real online service! You know you need something
+                    like this in your life to help you realise your deepest dreams.
+                    Sign up <em>now</em> to get started.</p>
+                    <p>You <em>know</em> you want to.</p>
+                </div>
+                <div class="form-section">
+                    <form action="" method="post">
+
+
+
+                    </form>
+                </div>
+            </div>
             <div class="side-panel">
                 <div class="logo">
                     <img src="img/odin-lined.png">
@@ -19,18 +34,7 @@
                     Unsplash</a>
                 </div>
             </div>
-            <div class="content">
-                <div class="header-section">
-
-                </div>
-                <div class="form-section">
-                    <form action="" method="post">
-
-
-
-                    </form>
-                </div>
-            </div>
+            
         </div>
     </body>
 </html>
