--- a/index.html
+++ b/index.html
@@ -16,9 +16,32 @@
                     <p>You <em>know</em> you want to.</p>
                 </div>
                 <div class="form-section">
+                    <div class="form-title">Let's do this!</div>
                     <form action="" method="post">
-
-
+                        <li>
+                            <label for="first-name">FIRST NAME</label>
+                            <input type="text" id="first-name" name="firstname">
+                        </li>
+                        <li>
+                            <label for="last-name">LAST NAME</label>
+                            <input type="text" id="last-name" name="lastname">
+                        </li>
+                        <li>
+                            <label for="email">EMAIL ADDRESS</label>
+                            <input type="email" id="email" name="email">
+                        </li>
+                        <li>
+                            <label for="phone-number">TELEPHONE NUMBER</label>
+                            <input type="tel" id="phone-number" name="phonenumber">
+                        </li>
+                        <li>
+                            <label for="password-primary">PASSWORD</label>
+                            <input type="password" id="password-primary" name="password">
+                        </li>
+                        <li>
+                            <label for="password-secondary">CONFIRM PASSWORD</label>
+                            <input type="password" id="password-secondary" name="password">
+                        </li>
 
                     </form>
                 </div>
