--- a/index.html
+++ b/index.html
@@ -17,32 +17,34 @@
                 </div>
                 <div class="form-section">
                     <div class="form-title">Let's do this!</div>
-                    <form action="" method="post">
-                        <li>
-                            <label for="first-name">FIRST NAME</label>
-                            <input type="text" id="first-name" name="firstname">
-                        </li>
-                        <li>
-                            <label for="last-name">LAST NAME</label>
-                            <input type="text" id="last-name" name="lastname">
-                        </li>
-                        <li>
-                            <label for="email">EMAIL ADDRESS</label>
-                            <input type="email" id="email" name="email">
-                        </li>
-                        <li>
-                            <label for="phone-number">TELEPHONE NUMBER</label>
-                            <input type="tel" id="phone-number" name="phonenumber">
-                        </li>
-                        <li>
-                            <label for="password-primary">PASSWORD</label>
-                            <input type="password" id="password-primary" name="password">
-                        </li>
-                        <li>
-                            <label for="password-secondary">CONFIRM PASSWORD</label>
-                            <input type="password" id="password-secondary" name="password">
-                        </li>
-
+                    <form class="form-content" action="" method="post">
+                        <div class="form-content-inputs">
+                            <li>
+                                <label class="form-input-label" for="first-name">FIRST NAME</label>
+                                <input type="text" id="first-name" name="firstname">
+                            </li>
+                            <li>
+                                <label class="form-input-label" for="last-name">LAST NAME</label>
+                                <input type="text" id="last-name" name="lastname">
+                            </li>
+                            <li>
+                                <label class="form-input-label" for="email">EMAIL ADDRESS</label>
+                                <input type="email" id="email" name="email">
+                            </li>
+                            <li>
+                                <label class="form-input-label" for="phone-number">TELEPHONE NUMBER</label>
+                                <input type="tel" id="phone-number" name="phonenumber">
+                            </li>
+                            <li>
+                                <label class="form-input-label" for="password-primary">PASSWORD</label>
+                                <input type="password" id="password-primary" name="password">
+                            </li>
+                            <li>
+                                <label class="form-input-label" for="password-secondary">CONFIRM PASSWORD</label>
+                                <input type="password" id="password-secondary" name="password">
+                            </li>
+                        </div>
+                        <button type="submit">Create Account</button>
                     </form>
                 </div>
             </div>
@@ -61,6 +63,3 @@
         </div>
     </body>
 </html>
-
-
-<!--Photo by<a href="https://unsplash.com/@handhey?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Hamdhulla Shakeeb</a> on <a href="https://unsplash.com/photos/S98UHzzXq_E?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
