Create log-in link and apply styling

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         </div>
                         <button type="submit">Create Account</button>
                     </form>
+                    <div class="log-in">Already have an account? <a class="log-in-link" href="">Log in</a></div>
                 </div>
             </div>
             <div class="side-panel">
