--- a/index.html
+++ b/index.html
@@ -17,31 +17,32 @@
                 </div>
                 <div class="form-section">
                     <div class="form-title">Let's do this!</div>
+                    <div class="requirement-info">Required fields are marked with *</div>
                     <form class="form-content" action="" method="post">
                         <div class="form-content-inputs">
                             <li>
-                                <label class="form-input-label" for="first-name">FIRST NAME</label>
-                                <input type="text" id="first-name" name="firstname">
+                                <label class="form-input-label" for="first-name">FIRST NAME*</label>
+                                <input type="text" id="first-name" name="firstname" required>
                             </li>
                             <li>
-                                <label class="form-input-label" for="last-name">LAST NAME</label>
-                                <input type="text" id="last-name" name="lastname">
+                                <label class="form-input-label" for="last-name">LAST NAME*</label>
+                                <input type="text" id="last-name" name="lastname" required>
                             </li>
                             <li>
-                                <label class="form-input-label" for="email">EMAIL ADDRESS</label>
-                                <input type="email" id="email" name="email">
+                                <label class="form-input-label" for="email">EMAIL ADDRESS*</label>
+                                <input type="email" id="email" name="email" required>
                             </li>
                             <li>
                                 <label class="form-input-label" for="phone-number">TELEPHONE NUMBER</label>
                                 <input type="tel" id="phone-number" name="phonenumber">
                             </li>
                             <li>
-                                <label class="form-input-label" for="password-primary">PASSWORD</label>
-                                <input type="password" id="password-primary" name="password">
+                                <label class="form-input-label" for="password-primary">PASSWORD*</label>
+                                <input type="password" id="password-primary" name="password" required>
                             </li>
                             <li>
-                                <label class="form-input-label" for="password-secondary">CONFIRM PASSWORD</label>
-                                <input type="password" id="password-secondary" name="password">
+                                <label class="form-input-label" for="password-secondary">CONFIRM PASSWORD*</label>
+                                <input type="password" id="password-secondary" name="password" required>
                             </li>
                         </div>
                         <button type="submit">Create Account</button>
