--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
                     <form class="form-content" action="" method="post">
                         <div class="form-content-inputs">
                             <li>
-                                <label class="form-input-label" for="first-name">FIRST NAME*</label>
+                                <label class="form-input-label label-first-name" for="first-name">FIRST NAME*</label>
                                 <input type="text" id="first-name" name="firstname" required>
                             </li>
                             <li>
-                                <label class="form-input-label" for="last-name">LAST NAME*</label>
+                                <label class="form-input-label label-last-name" for="last-name">LAST NAME*</label>
                                 <input type="text" id="last-name" name="lastname" required>
                             </li>
                             <li>
-                                <label class="form-input-label" for="email">EMAIL ADDRESS*</label>
+                                <label class="form-input-label label-email" for="email">EMAIL ADDRESS*</label>
                                 <input type="email" id="email" name="email" required>
                             </li>
                             <li>
-                                <label class="form-input-label" for="phone-number">TELEPHONE NUMBER</label>
+                                <label class="form-input-label label-phone-number" for="phone-number">TELEPHONE NUMBER</label>
                                 <input type="tel" id="phone-number" name="phonenumber">
                             </li>
                             <li>
-                                <label class="form-input-label" for="password-primary">PASSWORD*</label>
+                                <label class="form-input-label label-password-primary" for="password-primary">PASSWORD*</label>
                                 <input type="password" id="password-primary" name="password" required>
                             </li>
                             <li>
-                                <label class="form-input-label" for="password-secondary">CONFIRM PASSWORD*</label>
+                                <label class="form-input-label label-password-secondary" for="password-secondary">CONFIRM PASSWORD*</label>
                                 <input type="password" id="password-secondary" name="password" required>
                             </li>
                         </div>
