--- a/index.html
+++ b/index.html
@@ -20,30 +20,52 @@
                     <div class="requirement-info">Required fields are marked with *</div>
                     <form class="form-content" action="" method="post">
                         <div class="form-content-inputs">
-                            <li>
-                                <label class="form-input-label label-first-name" for="first-name">FIRST NAME*</label>
-                                <input type="text" id="first-name" name="firstname" required>
-                            </li>
-                            <li>
-                                <label class="form-input-label label-last-name" for="last-name">LAST NAME*</label>
-                                <input type="text" id="last-name" name="lastname" required>
-                            </li>
-                            <li>
-                                <label class="form-input-label label-email" for="email">EMAIL ADDRESS*</label>
-                                <input type="email" id="email" name="email" required>
-                            </li>
-                            <li>
-                                <label class="form-input-label label-phone-number" for="phone-number">TELEPHONE NUMBER</label>
-                                <input type="tel" id="phone-number" name="phonenumber">
-                            </li>
-                            <li>
-                                <label class="form-input-label label-password-primary" for="password-primary">PASSWORD*</label>
-                                <input type="password" id="password-primary" name="password" required>
-                            </li>
-                            <li>
-                                <label class="form-input-label label-password-secondary" for="password-secondary">CONFIRM PASSWORD*</label>
-                                <input type="password" id="password-secondary" name="password" required>
-                            </li>
+                            <div class="form-content-inputs-container">
+                                <li>
+                                    <label class="form-input-label label-first-name" for="first-name">FIRST NAME*</label>
+                                    <input type="text" id="first-name" name="firstname" 
+                                        placeholder=" " pattern="^[^0-9]+$"
+                                        title="Your name should contain only the letters a-z" required>
+                                </li>
+                                <li>
+                                    <label class="form-input-label label-last-name" for="last-name">LAST NAME*</label>
+                                    <input type="text" id="last-name" name="lastname"
+                                    placeholder=" " pattern="^[^0-9]+$"
+                                    title="Your name should contain only the letters a-z" required>
+                                </li>
+                                <li>
+                                    <label class="form-input-label label-email" for="email">EMAIL ADDRESS*</label>
+                                    <input type="email" id="email" name="email" placeholder=" "
+                                        title="Please enter a valid email address in the form name@company"
+                                        required>
+                                </li>
+                                <li>
+                                    <label class="form-input-label label-phone-number" for="phone-number">TELEPHONE NUMBER</label>
+                                    <input type="tel" id="phone-number" name="phonenumber"
+                                    title="Please enter a valid telephone number"
+                                    placeholder=" ">
+                                </li>
+                                <li>
+                                    <label class="form-input-label label-password-primary" for="password-primary">PASSWORD*</label>
+                                    <input type="password" id="password-primary" name="password"
+                                    title="Please enter a valid password"
+                                    pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{8,}$"
+                                    placeholder=" " required>
+                                </li>
+                                <li>
+                                    <label class="form-input-label label-password-secondary" for="password-secondary">CONFIRM PASSWORD*</label>
+                                    <input type="password" id="password-secondary" name="password"
+                                    title="Please enter a valid password and ensure it matches the original"
+                                    placeholder=" " required>
+                                </li>
+                            </div>
+                            <div class="password-requirements">
+                                <div>Your password must contain the following</div>
+                                <li>At least 8 characters</li>
+                                <li>At least one letter from a-z</li>
+                                <li>At least one digit from 0-9</li>
+                                <li>At least one of the following symbols: @$!%*#?&</li>
+                            </div>
                         </div>
                         <button type="submit">Create Account</button>
                     </form>
