Make side-panel fixed position

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 </div>
             </div>
             <div class="side-panel">
+                <img src="img/hamdhulla-shakeeb-seaside-unsplash.jpg">
                 <div class="logo">
                     <img src="img/odin-lined.png">
                     <div class="company-name">ODIN</div>
